// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generated style shape snapshots > osm colorful (dark) 1`] = `
{
  "hasLight": false,
  "hasSky": true,
  "hasTerrain": false,
  "layers": [
    "background:background",
    "background:slot-below-fills",
    "fill:water-ocean",
    "fill:land-glacier",
    "fill:land-commercial",
    "fill:land-industrial",
    "fill:land-residential",
    "fill:land-agriculture",
    "fill:land-waste",
    "fill:land-park",
    "fill:land-garden",
    "fill:land-burial",
    "fill:land-leisure",
    "fill:land-rock",
    "fill:land-forest",
    "fill:land-grass",
    "fill:land-vegetation",
    "fill:land-sand",
    "fill:land-wetland",
    "fill:site-dangerarea",
    "fill:site-sportscentre",
    "fill:site-university",
    "fill:site-college",
    "fill:site-school",
    "fill:site-hospital",
    "fill:site-prison",
    "fill:site-parking",
    "fill:site-bicycleparking",
    "fill:site-construction",
    "line:water-river",
    "line:water-canal",
    "line:water-stream",
    "line:water-ditch",
    "fill:water-area",
    "fill:water-area-river",
    "fill:water-area-small",
    "fill:water-dam-area",
    "line:water-dam",
    "fill:water-pier-area",
    "line:water-pier",
    "fill:airport-area",
    "line:airport-taxiway:outline",
    "line:airport-runway:outline",
    "line:airport-taxiway",
    "line:airport-runway",
    "fill:building:outline",
    "fill:building",
    "background:slot-below-streets",
    "fill:tunnel-street-pedestrian-zone",
    "line:tunnel-way-footway:outline",
    "line:tunnel-way-steps:outline",
    "line:tunnel-way-path:outline",
    "line:tunnel-way-cycleway:outline",
    "line:tunnel-street-track:outline",
    "line:tunnel-street-pedestrian:outline",
    "line:tunnel-street-service:outline",
    "line:tunnel-street-livingstreet:outline",
    "line:tunnel-street-residential:outline",
    "line:tunnel-street-unclassified:outline",
    "line:tunnel-street-busway:outline",
    "line:tunnel-street-busguideway:outline",
    "line:tunnel-street-tertiary-link:outline",
    "line:tunnel-street-secondary-link:outline",
    "line:tunnel-street-primary-link:outline",
    "line:tunnel-street-trunk-link:outline",
    "line:tunnel-street-motorway-link:outline",
    "line:tunnel-street-tertiary:outline",
    "line:tunnel-street-secondary:outline",
    "line:tunnel-street-primary:outline",
    "line:tunnel-street-trunk:outline",
    "line:tunnel-street-motorway:outline",
    "line:tunnel-way-footway",
    "line:tunnel-way-steps",
    "line:tunnel-way-path",
    "line:tunnel-way-cycleway",
    "line:tunnel-street-track",
    "line:tunnel-street-pedestrian",
    "line:tunnel-street-service",
    "line:tunnel-street-livingstreet",
    "line:tunnel-street-residential",
    "line:tunnel-street-unclassified",
    "line:tunnel-street-busway",
    "line:tunnel-street-busguideway",
    "line:tunnel-street-track-bicycle",
    "line:tunnel-street-pedestrian-bicycle",
    "line:tunnel-street-service-bicycle",
    "line:tunnel-street-livingstreet-bicycle",
    "line:tunnel-street-residential-bicycle",
    "line:tunnel-street-unclassified-bicycle",
    "line:tunnel-street-tertiary-link",
    "line:tunnel-street-secondary-link",
    "line:tunnel-street-primary-link",
    "line:tunnel-street-trunk-link",
    "line:tunnel-street-motorway-link",
    "line:tunnel-street-tertiary",
    "line:tunnel-street-secondary",
    "line:tunnel-street-primary",
    "line:tunnel-street-trunk",
    "line:tunnel-street-motorway",
    "line:tunnel-transport-rail:outline",
    "line:tunnel-transport-rail-service:outline",
    "line:tunnel-transport-lightrail:outline",
    "line:tunnel-transport-lightrail-service:outline",
    "line:tunnel-transport-subway:outline",
    "line:tunnel-transport-narrowgauge:outline",
    "line:tunnel-transport-tram:outline",
    "line:tunnel-transport-funicular:outline",
    "line:tunnel-transport-monorail:outline",
    "line:tunnel-transport-rail",
    "line:tunnel-transport-rail-service",
    "line:tunnel-transport-lightrail",
    "line:tunnel-transport-lightrail-service",
    "line:tunnel-transport-subway",
    "line:tunnel-transport-narrowgauge",
    "line:tunnel-transport-tram",
    "line:tunnel-transport-funicular",
    "line:tunnel-transport-monorail",
    "fill:bridge",
    "fill:street-pedestrian-zone",
    "line:way-footway:outline",
    "line:way-steps:outline",
    "line:way-path:outline",
    "line:way-cycleway:outline",
    "line:street-track:outline",
    "line:street-pedestrian:outline",
    "line:street-service:outline",
    "line:street-livingstreet:outline",
    "line:street-residential:outline",
    "line:street-unclassified:outline",
    "line:street-busway:outline",
    "line:street-busguideway:outline",
    "line:street-tertiary-link:outline",
    "line:street-secondary-link:outline",
    "line:street-primary-link:outline",
    "line:street-trunk-link:outline",
    "line:street-motorway-link:outline",
    "line:street-tertiary:outline",
    "line:street-secondary:outline",
    "line:street-primary:outline",
    "line:street-trunk:outline",
    "line:street-motorway:outline",
    "line:way-footway",
    "line:way-steps",
    "line:way-path",
    "line:way-cycleway",
    "line:street-track",
    "line:street-pedestrian",
    "line:street-service",
    "line:street-livingstreet",
    "line:street-residential",
    "line:street-unclassified",
    "line:street-busway",
    "line:street-busguideway",
    "line:street-track-bicycle",
    "line:street-pedestrian-bicycle",
    "line:street-service-bicycle",
    "line:street-livingstreet-bicycle",
    "line:street-residential-bicycle",
    "line:street-unclassified-bicycle",
    "line:street-tertiary-link",
    "line:street-secondary-link",
    "line:street-primary-link",
    "line:street-trunk-link",
    "line:street-motorway-link",
    "line:street-tertiary",
    "line:street-secondary",
    "line:street-primary",
    "line:street-trunk",
    "line:street-motorway",
    "line:transport-rail:outline",
    "line:transport-rail-service:outline",
    "line:transport-lightrail:outline",
    "line:transport-lightrail-service:outline",
    "line:transport-subway:outline",
    "line:transport-narrowgauge:outline",
    "line:transport-tram:outline",
    "line:transport-funicular:outline",
    "line:transport-monorail:outline",
    "line:aerialway-cablecar:outline",
    "line:aerialway-gondola:outline",
    "line:aerialway-goods:outline",
    "line:aerialway-chairlift:outline",
    "line:aerialway-draglift:outline",
    "line:aerialway-tbar:outline",
    "line:aerialway-jbar:outline",
    "line:aerialway-platter:outline",
    "line:aerialway-ropetow:outline",
    "line:transport-rail",
    "line:transport-rail-service",
    "line:transport-lightrail",
    "line:transport-lightrail-service",
    "line:transport-subway",
    "line:transport-narrowgauge",
    "line:transport-tram",
    "line:transport-funicular",
    "line:transport-monorail",
    "line:aerialway-cablecar",
    "line:aerialway-gondola",
    "line:aerialway-goods",
    "line:aerialway-chairlift",
    "line:aerialway-draglift",
    "line:aerialway-tbar",
    "line:aerialway-jbar",
    "line:aerialway-platter",
    "line:aerialway-ropetow",
    "line:transport-ferry",
    "line:bridge-way-footway:bridge",
    "line:bridge-way-steps:bridge",
    "line:bridge-way-path:bridge",
    "line:bridge-way-cycleway:bridge",
    "line:bridge-street-track:bridge",
    "line:bridge-street-pedestrian:bridge",
    "line:bridge-street-service:bridge",
    "line:bridge-street-livingstreet:bridge",
    "line:bridge-street-residential:bridge",
    "line:bridge-street-unclassified:bridge",
    "line:bridge-street-busway:bridge",
    "line:bridge-street-busguideway:bridge",
    "line:bridge-street-tertiary-link:bridge",
    "line:bridge-street-secondary-link:bridge",
    "line:bridge-street-primary-link:bridge",
    "line:bridge-street-trunk-link:bridge",
    "line:bridge-street-motorway-link:bridge",
    "line:bridge-street-tertiary:bridge",
    "line:bridge-street-secondary:bridge",
    "line:bridge-street-primary:bridge",
    "line:bridge-street-trunk:bridge",
    "line:bridge-street-motorway:bridge",
    "fill:bridge-street-pedestrian-zone",
    "line:bridge-way-footway:outline",
    "line:bridge-way-steps:outline",
    "line:bridge-way-path:outline",
    "line:bridge-way-cycleway:outline",
    "line:bridge-street-track:outline",
    "line:bridge-street-pedestrian:outline",
    "line:bridge-street-service:outline",
    "line:bridge-street-livingstreet:outline",
    "line:bridge-street-residential:outline",
    "line:bridge-street-unclassified:outline",
    "line:bridge-street-busway:outline",
    "line:bridge-street-busguideway:outline",
    "line:bridge-street-tertiary-link:outline",
    "line:bridge-street-secondary-link:outline",
    "line:bridge-street-primary-link:outline",
    "line:bridge-street-trunk-link:outline",
    "line:bridge-street-motorway-link:outline",
    "line:bridge-street-tertiary:outline",
    "line:bridge-street-secondary:outline",
    "line:bridge-street-primary:outline",
    "line:bridge-street-trunk:outline",
    "line:bridge-street-motorway:outline",
    "line:bridge-way-footway",
    "line:bridge-way-steps",
    "line:bridge-way-path",
    "line:bridge-way-cycleway",
    "line:bridge-street-track",
    "line:bridge-street-pedestrian",
    "line:bridge-street-service",
    "line:bridge-street-livingstreet",
    "line:bridge-street-residential",
    "line:bridge-street-unclassified",
    "line:bridge-street-busway",
    "line:bridge-street-busguideway",
    "line:bridge-street-track-bicycle",
    "line:bridge-street-pedestrian-bicycle",
    "line:bridge-street-service-bicycle",
    "line:bridge-street-livingstreet-bicycle",
    "line:bridge-street-residential-bicycle",
    "line:bridge-street-unclassified-bicycle",
    "line:bridge-street-tertiary-link",
    "line:bridge-street-secondary-link",
    "line:bridge-street-primary-link",
    "line:bridge-street-trunk-link",
    "line:bridge-street-motorway-link",
    "line:bridge-street-tertiary",
    "line:bridge-street-secondary",
    "line:bridge-street-primary",
    "line:bridge-street-trunk",
    "line:bridge-street-motorway",
    "line:bridge-transport-rail:outline",
    "line:bridge-transport-rail-service:outline",
    "line:bridge-transport-lightrail:outline",
    "line:bridge-transport-lightrail-service:outline",
    "line:bridge-transport-subway:outline",
    "line:bridge-transport-narrowgauge:outline",
    "line:bridge-transport-tram:outline",
    "line:bridge-transport-funicular:outline",
    "line:bridge-transport-monorail:outline",
    "line:bridge-transport-rail",
    "line:bridge-transport-rail-service",
    "line:bridge-transport-lightrail",
    "line:bridge-transport-lightrail-service",
    "line:bridge-transport-subway",
    "line:bridge-transport-narrowgauge",
    "line:bridge-transport-tram",
    "line:bridge-transport-funicular",
    "line:bridge-transport-monorail",
    "background:slot-below-symbols",
    "line:boundary-country:outline",
    "line:boundary-country-disputed:outline",
    "line:boundary-state:outline",
    "line:boundary-country",
    "line:boundary-country-disputed",
    "line:boundary-state",
    "line:boundary-country-maritime",
    "symbol:label-address-housenumber",
    "symbol:marking-oneway",
    "symbol:marking-oneway-reverse",
    "symbol:marking-bicycle",
    "symbol:poi-amenity",
    "symbol:poi-leisure",
    "symbol:poi-tourism",
    "symbol:poi-shop",
    "symbol:poi-man_made",
    "symbol:poi-historic",
    "symbol:poi-emergency",
    "symbol:poi-highway",
    "symbol:poi-office",
    "symbol:symbol-transit-bus",
    "symbol:symbol-transit-tram",
    "symbol:symbol-transit-station",
    "symbol:symbol-transit-airfield",
    "symbol:symbol-transit-airport",
    "background:slot-below-labels",
    "symbol:label-motorway-exit",
    "symbol:label-motorway-shield",
    "symbol:label-street-pedestrian",
    "symbol:label-street-livingstreet",
    "symbol:label-street-residential",
    "symbol:label-street-unclassified",
    "symbol:label-street-tertiary",
    "symbol:label-street-secondary",
    "symbol:label-street-primary",
    "symbol:label-street-trunk",
    "symbol:label-street-track",
    "symbol:label-place-neighbourhood",
    "symbol:label-place-quarter",
    "symbol:label-place-suburb",
    "symbol:label-place-hamlet",
    "symbol:label-place-village",
    "symbol:label-place-town",
    "symbol:label-boundary-state",
    "symbol:label-place-city",
    "symbol:label-place-statecapital",
    "symbol:label-place-capital",
    "symbol:label-boundary-country-small",
    "symbol:label-boundary-country-medium",
    "symbol:label-boundary-country-large",
  ],
  "sources": [
    "versatiles-shortbread",
  ],
  "version": 8,
}
`;

exports[`generated style shape snapshots > osm colorful (light) 1`] = `
{
  "hasLight": false,
  "hasSky": true,
  "hasTerrain": false,
  "layers": [
    "background:background",
    "background:slot-below-fills",
    "fill:water-ocean",
    "fill:land-glacier",
    "fill:land-commercial",
    "fill:land-industrial",
    "fill:land-residential",
    "fill:land-agriculture",
    "fill:land-waste",
    "fill:land-park",
    "fill:land-garden",
    "fill:land-burial",
    "fill:land-leisure",
    "fill:land-rock",
    "fill:land-forest",
    "fill:land-grass",
    "fill:land-vegetation",
    "fill:land-sand",
    "fill:land-wetland",
    "fill:site-dangerarea",
    "fill:site-sportscentre",
    "fill:site-university",
    "fill:site-college",
    "fill:site-school",
    "fill:site-hospital",
    "fill:site-prison",
    "fill:site-parking",
    "fill:site-bicycleparking",
    "fill:site-construction",
    "line:water-river",
    "line:water-canal",
    "line:water-stream",
    "line:water-ditch",
    "fill:water-area",
    "fill:water-area-river",
    "fill:water-area-small",
    "fill:water-dam-area",
    "line:water-dam",
    "fill:water-pier-area",
    "line:water-pier",
    "fill:airport-area",
    "line:airport-taxiway:outline",
    "line:airport-runway:outline",
    "line:airport-taxiway",
    "line:airport-runway",
    "fill:building:outline",
    "fill:building",
    "background:slot-below-streets",
    "fill:tunnel-street-pedestrian-zone",
    "line:tunnel-way-footway:outline",
    "line:tunnel-way-steps:outline",
    "line:tunnel-way-path:outline",
    "line:tunnel-way-cycleway:outline",
    "line:tunnel-street-track:outline",
    "line:tunnel-street-pedestrian:outline",
    "line:tunnel-street-service:outline",
    "line:tunnel-street-livingstreet:outline",
    "line:tunnel-street-residential:outline",
    "line:tunnel-street-unclassified:outline",
    "line:tunnel-street-busway:outline",
    "line:tunnel-street-busguideway:outline",
    "line:tunnel-street-tertiary-link:outline",
    "line:tunnel-street-secondary-link:outline",
    "line:tunnel-street-primary-link:outline",
    "line:tunnel-street-trunk-link:outline",
    "line:tunnel-street-motorway-link:outline",
    "line:tunnel-street-tertiary:outline",
    "line:tunnel-street-secondary:outline",
    "line:tunnel-street-primary:outline",
    "line:tunnel-street-trunk:outline",
    "line:tunnel-street-motorway:outline",
    "line:tunnel-way-footway",
    "line:tunnel-way-steps",
    "line:tunnel-way-path",
    "line:tunnel-way-cycleway",
    "line:tunnel-street-track",
    "line:tunnel-street-pedestrian",
    "line:tunnel-street-service",
    "line:tunnel-street-livingstreet",
    "line:tunnel-street-residential",
    "line:tunnel-street-unclassified",
    "line:tunnel-street-busway",
    "line:tunnel-street-busguideway",
    "line:tunnel-street-track-bicycle",
    "line:tunnel-street-pedestrian-bicycle",
    "line:tunnel-street-service-bicycle",
    "line:tunnel-street-livingstreet-bicycle",
    "line:tunnel-street-residential-bicycle",
    "line:tunnel-street-unclassified-bicycle",
    "line:tunnel-street-tertiary-link",
    "line:tunnel-street-secondary-link",
    "line:tunnel-street-primary-link",
    "line:tunnel-street-trunk-link",
    "line:tunnel-street-motorway-link",
    "line:tunnel-street-tertiary",
    "line:tunnel-street-secondary",
    "line:tunnel-street-primary",
    "line:tunnel-street-trunk",
    "line:tunnel-street-motorway",
    "line:tunnel-transport-rail:outline",
    "line:tunnel-transport-rail-service:outline",
    "line:tunnel-transport-lightrail:outline",
    "line:tunnel-transport-lightrail-service:outline",
    "line:tunnel-transport-subway:outline",
    "line:tunnel-transport-narrowgauge:outline",
    "line:tunnel-transport-tram:outline",
    "line:tunnel-transport-funicular:outline",
    "line:tunnel-transport-monorail:outline",
    "line:tunnel-transport-rail",
    "line:tunnel-transport-rail-service",
    "line:tunnel-transport-lightrail",
    "line:tunnel-transport-lightrail-service",
    "line:tunnel-transport-subway",
    "line:tunnel-transport-narrowgauge",
    "line:tunnel-transport-tram",
    "line:tunnel-transport-funicular",
    "line:tunnel-transport-monorail",
    "fill:bridge",
    "fill:street-pedestrian-zone",
    "line:way-footway:outline",
    "line:way-steps:outline",
    "line:way-path:outline",
    "line:way-cycleway:outline",
    "line:street-track:outline",
    "line:street-pedestrian:outline",
    "line:street-service:outline",
    "line:street-livingstreet:outline",
    "line:street-residential:outline",
    "line:street-unclassified:outline",
    "line:street-busway:outline",
    "line:street-busguideway:outline",
    "line:street-tertiary-link:outline",
    "line:street-secondary-link:outline",
    "line:street-primary-link:outline",
    "line:street-trunk-link:outline",
    "line:street-motorway-link:outline",
    "line:street-tertiary:outline",
    "line:street-secondary:outline",
    "line:street-primary:outline",
    "line:street-trunk:outline",
    "line:street-motorway:outline",
    "line:way-footway",
    "line:way-steps",
    "line:way-path",
    "line:way-cycleway",
    "line:street-track",
    "line:street-pedestrian",
    "line:street-service",
    "line:street-livingstreet",
    "line:street-residential",
    "line:street-unclassified",
    "line:street-busway",
    "line:street-busguideway",
    "line:street-track-bicycle",
    "line:street-pedestrian-bicycle",
    "line:street-service-bicycle",
    "line:street-livingstreet-bicycle",
    "line:street-residential-bicycle",
    "line:street-unclassified-bicycle",
    "line:street-tertiary-link",
    "line:street-secondary-link",
    "line:street-primary-link",
    "line:street-trunk-link",
    "line:street-motorway-link",
    "line:street-tertiary",
    "line:street-secondary",
    "line:street-primary",
    "line:street-trunk",
    "line:street-motorway",
    "line:transport-rail:outline",
    "line:transport-rail-service:outline",
    "line:transport-lightrail:outline",
    "line:transport-lightrail-service:outline",
    "line:transport-subway:outline",
    "line:transport-narrowgauge:outline",
    "line:transport-tram:outline",
    "line:transport-funicular:outline",
    "line:transport-monorail:outline",
    "line:aerialway-cablecar:outline",
    "line:aerialway-gondola:outline",
    "line:aerialway-goods:outline",
    "line:aerialway-chairlift:outline",
    "line:aerialway-draglift:outline",
    "line:aerialway-tbar:outline",
    "line:aerialway-jbar:outline",
    "line:aerialway-platter:outline",
    "line:aerialway-ropetow:outline",
    "line:transport-rail",
    "line:transport-rail-service",
    "line:transport-lightrail",
    "line:transport-lightrail-service",
    "line:transport-subway",
    "line:transport-narrowgauge",
    "line:transport-tram",
    "line:transport-funicular",
    "line:transport-monorail",
    "line:aerialway-cablecar",
    "line:aerialway-gondola",
    "line:aerialway-goods",
    "line:aerialway-chairlift",
    "line:aerialway-draglift",
    "line:aerialway-tbar",
    "line:aerialway-jbar",
    "line:aerialway-platter",
    "line:aerialway-ropetow",
    "line:transport-ferry",
    "line:bridge-way-footway:bridge",
    "line:bridge-way-steps:bridge",
    "line:bridge-way-path:bridge",
    "line:bridge-way-cycleway:bridge",
    "line:bridge-street-track:bridge",
    "line:bridge-street-pedestrian:bridge",
    "line:bridge-street-service:bridge",
    "line:bridge-street-livingstreet:bridge",
    "line:bridge-street-residential:bridge",
    "line:bridge-street-unclassified:bridge",
    "line:bridge-street-busway:bridge",
    "line:bridge-street-busguideway:bridge",
    "line:bridge-street-tertiary-link:bridge",
    "line:bridge-street-secondary-link:bridge",
    "line:bridge-street-primary-link:bridge",
    "line:bridge-street-trunk-link:bridge",
    "line:bridge-street-motorway-link:bridge",
    "line:bridge-street-tertiary:bridge",
    "line:bridge-street-secondary:bridge",
    "line:bridge-street-primary:bridge",
    "line:bridge-street-trunk:bridge",
    "line:bridge-street-motorway:bridge",
    "fill:bridge-street-pedestrian-zone",
    "line:bridge-way-footway:outline",
    "line:bridge-way-steps:outline",
    "line:bridge-way-path:outline",
    "line:bridge-way-cycleway:outline",
    "line:bridge-street-track:outline",
    "line:bridge-street-pedestrian:outline",
    "line:bridge-street-service:outline",
    "line:bridge-street-livingstreet:outline",
    "line:bridge-street-residential:outline",
    "line:bridge-street-unclassified:outline",
    "line:bridge-street-busway:outline",
    "line:bridge-street-busguideway:outline",
    "line:bridge-street-tertiary-link:outline",
    "line:bridge-street-secondary-link:outline",
    "line:bridge-street-primary-link:outline",
    "line:bridge-street-trunk-link:outline",
    "line:bridge-street-motorway-link:outline",
    "line:bridge-street-tertiary:outline",
    "line:bridge-street-secondary:outline",
    "line:bridge-street-primary:outline",
    "line:bridge-street-trunk:outline",
    "line:bridge-street-motorway:outline",
    "line:bridge-way-footway",
    "line:bridge-way-steps",
    "line:bridge-way-path",
    "line:bridge-way-cycleway",
    "line:bridge-street-track",
    "line:bridge-street-pedestrian",
    "line:bridge-street-service",
    "line:bridge-street-livingstreet",
    "line:bridge-street-residential",
    "line:bridge-street-unclassified",
    "line:bridge-street-busway",
    "line:bridge-street-busguideway",
    "line:bridge-street-track-bicycle",
    "line:bridge-street-pedestrian-bicycle",
    "line:bridge-street-service-bicycle",
    "line:bridge-street-livingstreet-bicycle",
    "line:bridge-street-residential-bicycle",
    "line:bridge-street-unclassified-bicycle",
    "line:bridge-street-tertiary-link",
    "line:bridge-street-secondary-link",
    "line:bridge-street-primary-link",
    "line:bridge-street-trunk-link",
    "line:bridge-street-motorway-link",
    "line:bridge-street-tertiary",
    "line:bridge-street-secondary",
    "line:bridge-street-primary",
    "line:bridge-street-trunk",
    "line:bridge-street-motorway",
    "line:bridge-transport-rail:outline",
    "line:bridge-transport-rail-service:outline",
    "line:bridge-transport-lightrail:outline",
    "line:bridge-transport-lightrail-service:outline",
    "line:bridge-transport-subway:outline",
    "line:bridge-transport-narrowgauge:outline",
    "line:bridge-transport-tram:outline",
    "line:bridge-transport-funicular:outline",
    "line:bridge-transport-monorail:outline",
    "line:bridge-transport-rail",
    "line:bridge-transport-rail-service",
    "line:bridge-transport-lightrail",
    "line:bridge-transport-lightrail-service",
    "line:bridge-transport-subway",
    "line:bridge-transport-narrowgauge",
    "line:bridge-transport-tram",
    "line:bridge-transport-funicular",
    "line:bridge-transport-monorail",
    "background:slot-below-symbols",
    "line:boundary-country:outline",
    "line:boundary-country-disputed:outline",
    "line:boundary-state:outline",
    "line:boundary-country",
    "line:boundary-country-disputed",
    "line:boundary-state",
    "line:boundary-country-maritime",
    "symbol:label-address-housenumber",
    "symbol:marking-oneway",
    "symbol:marking-oneway-reverse",
    "symbol:marking-bicycle",
    "symbol:poi-amenity",
    "symbol:poi-leisure",
    "symbol:poi-tourism",
    "symbol:poi-shop",
    "symbol:poi-man_made",
    "symbol:poi-historic",
    "symbol:poi-emergency",
    "symbol:poi-highway",
    "symbol:poi-office",
    "symbol:symbol-transit-bus",
    "symbol:symbol-transit-tram",
    "symbol:symbol-transit-station",
    "symbol:symbol-transit-airfield",
    "symbol:symbol-transit-airport",
    "background:slot-below-labels",
    "symbol:label-motorway-exit",
    "symbol:label-motorway-shield",
    "symbol:label-street-pedestrian",
    "symbol:label-street-livingstreet",
    "symbol:label-street-residential",
    "symbol:label-street-unclassified",
    "symbol:label-street-tertiary",
    "symbol:label-street-secondary",
    "symbol:label-street-primary",
    "symbol:label-street-trunk",
    "symbol:label-street-track",
    "symbol:label-place-neighbourhood",
    "symbol:label-place-quarter",
    "symbol:label-place-suburb",
    "symbol:label-place-hamlet",
    "symbol:label-place-village",
    "symbol:label-place-town",
    "symbol:label-boundary-state",
    "symbol:label-place-city",
    "symbol:label-place-statecapital",
    "symbol:label-place-capital",
    "symbol:label-boundary-country-small",
    "symbol:label-boundary-country-medium",
    "symbol:label-boundary-country-large",
  ],
  "sources": [
    "versatiles-shortbread",
  ],
  "version": 8,
}
`;

exports[`generated style shape snapshots > osm colorful with terrain + hillshade + extruded buildings 1`] = `
{
  "hasLight": true,
  "hasSky": true,
  "hasTerrain": true,
  "layers": [
    "background:background",
    "background:slot-below-fills",
    "fill:water-ocean",
    "fill:land-glacier",
    "fill:land-commercial",
    "fill:land-industrial",
    "fill:land-residential",
    "fill:land-agriculture",
    "fill:land-waste",
    "fill:land-park",
    "fill:land-garden",
    "fill:land-burial",
    "fill:land-leisure",
    "fill:land-rock",
    "fill:land-forest",
    "fill:land-grass",
    "fill:land-vegetation",
    "fill:land-sand",
    "fill:land-wetland",
    "fill:site-dangerarea",
    "fill:site-sportscentre",
    "fill:site-university",
    "fill:site-college",
    "fill:site-school",
    "fill:site-hospital",
    "fill:site-prison",
    "fill:site-parking",
    "fill:site-bicycleparking",
    "fill:site-construction",
    "hillshade:hillshade",
    "line:water-river",
    "line:water-canal",
    "line:water-stream",
    "line:water-ditch",
    "fill:water-area",
    "fill:water-area-river",
    "fill:water-area-small",
    "fill:water-dam-area",
    "line:water-dam",
    "fill:water-pier-area",
    "line:water-pier",
    "fill:airport-area",
    "line:airport-taxiway:outline",
    "line:airport-runway:outline",
    "line:airport-taxiway",
    "line:airport-runway",
    "background:slot-below-streets",
    "fill:tunnel-street-pedestrian-zone",
    "line:tunnel-way-footway:outline",
    "line:tunnel-way-steps:outline",
    "line:tunnel-way-path:outline",
    "line:tunnel-way-cycleway:outline",
    "line:tunnel-street-track:outline",
    "line:tunnel-street-pedestrian:outline",
    "line:tunnel-street-service:outline",
    "line:tunnel-street-livingstreet:outline",
    "line:tunnel-street-residential:outline",
    "line:tunnel-street-unclassified:outline",
    "line:tunnel-street-busway:outline",
    "line:tunnel-street-busguideway:outline",
    "line:tunnel-street-tertiary-link:outline",
    "line:tunnel-street-secondary-link:outline",
    "line:tunnel-street-primary-link:outline",
    "line:tunnel-street-trunk-link:outline",
    "line:tunnel-street-motorway-link:outline",
    "line:tunnel-street-tertiary:outline",
    "line:tunnel-street-secondary:outline",
    "line:tunnel-street-primary:outline",
    "line:tunnel-street-trunk:outline",
    "line:tunnel-street-motorway:outline",
    "line:tunnel-way-footway",
    "line:tunnel-way-steps",
    "line:tunnel-way-path",
    "line:tunnel-way-cycleway",
    "line:tunnel-street-track",
    "line:tunnel-street-pedestrian",
    "line:tunnel-street-service",
    "line:tunnel-street-livingstreet",
    "line:tunnel-street-residential",
    "line:tunnel-street-unclassified",
    "line:tunnel-street-busway",
    "line:tunnel-street-busguideway",
    "line:tunnel-street-track-bicycle",
    "line:tunnel-street-pedestrian-bicycle",
    "line:tunnel-street-service-bicycle",
    "line:tunnel-street-livingstreet-bicycle",
    "line:tunnel-street-residential-bicycle",
    "line:tunnel-street-unclassified-bicycle",
    "line:tunnel-street-tertiary-link",
    "line:tunnel-street-secondary-link",
    "line:tunnel-street-primary-link",
    "line:tunnel-street-trunk-link",
    "line:tunnel-street-motorway-link",
    "line:tunnel-street-tertiary",
    "line:tunnel-street-secondary",
    "line:tunnel-street-primary",
    "line:tunnel-street-trunk",
    "line:tunnel-street-motorway",
    "line:tunnel-transport-rail:outline",
    "line:tunnel-transport-rail-service:outline",
    "line:tunnel-transport-lightrail:outline",
    "line:tunnel-transport-lightrail-service:outline",
    "line:tunnel-transport-subway:outline",
    "line:tunnel-transport-narrowgauge:outline",
    "line:tunnel-transport-tram:outline",
    "line:tunnel-transport-funicular:outline",
    "line:tunnel-transport-monorail:outline",
    "line:tunnel-transport-rail",
    "line:tunnel-transport-rail-service",
    "line:tunnel-transport-lightrail",
    "line:tunnel-transport-lightrail-service",
    "line:tunnel-transport-subway",
    "line:tunnel-transport-narrowgauge",
    "line:tunnel-transport-tram",
    "line:tunnel-transport-funicular",
    "line:tunnel-transport-monorail",
    "fill:bridge",
    "fill:street-pedestrian-zone",
    "line:way-footway:outline",
    "line:way-steps:outline",
    "line:way-path:outline",
    "line:way-cycleway:outline",
    "line:street-track:outline",
    "line:street-pedestrian:outline",
    "line:street-service:outline",
    "line:street-livingstreet:outline",
    "line:street-residential:outline",
    "line:street-unclassified:outline",
    "line:street-busway:outline",
    "line:street-busguideway:outline",
    "line:street-tertiary-link:outline",
    "line:street-secondary-link:outline",
    "line:street-primary-link:outline",
    "line:street-trunk-link:outline",
    "line:street-motorway-link:outline",
    "line:street-tertiary:outline",
    "line:street-secondary:outline",
    "line:street-primary:outline",
    "line:street-trunk:outline",
    "line:street-motorway:outline",
    "line:way-footway",
    "line:way-steps",
    "line:way-path",
    "line:way-cycleway",
    "line:street-track",
    "line:street-pedestrian",
    "line:street-service",
    "line:street-livingstreet",
    "line:street-residential",
    "line:street-unclassified",
    "line:street-busway",
    "line:street-busguideway",
    "line:street-track-bicycle",
    "line:street-pedestrian-bicycle",
    "line:street-service-bicycle",
    "line:street-livingstreet-bicycle",
    "line:street-residential-bicycle",
    "line:street-unclassified-bicycle",
    "line:street-tertiary-link",
    "line:street-secondary-link",
    "line:street-primary-link",
    "line:street-trunk-link",
    "line:street-motorway-link",
    "line:street-tertiary",
    "line:street-secondary",
    "line:street-primary",
    "line:street-trunk",
    "line:street-motorway",
    "line:transport-rail:outline",
    "line:transport-rail-service:outline",
    "line:transport-lightrail:outline",
    "line:transport-lightrail-service:outline",
    "line:transport-subway:outline",
    "line:transport-narrowgauge:outline",
    "line:transport-tram:outline",
    "line:transport-funicular:outline",
    "line:transport-monorail:outline",
    "line:aerialway-cablecar:outline",
    "line:aerialway-gondola:outline",
    "line:aerialway-goods:outline",
    "line:aerialway-chairlift:outline",
    "line:aerialway-draglift:outline",
    "line:aerialway-tbar:outline",
    "line:aerialway-jbar:outline",
    "line:aerialway-platter:outline",
    "line:aerialway-ropetow:outline",
    "line:transport-rail",
    "line:transport-rail-service",
    "line:transport-lightrail",
    "line:transport-lightrail-service",
    "line:transport-subway",
    "line:transport-narrowgauge",
    "line:transport-tram",
    "line:transport-funicular",
    "line:transport-monorail",
    "line:aerialway-cablecar",
    "line:aerialway-gondola",
    "line:aerialway-goods",
    "line:aerialway-chairlift",
    "line:aerialway-draglift",
    "line:aerialway-tbar",
    "line:aerialway-jbar",
    "line:aerialway-platter",
    "line:aerialway-ropetow",
    "line:transport-ferry",
    "line:bridge-way-footway:bridge",
    "line:bridge-way-steps:bridge",
    "line:bridge-way-path:bridge",
    "line:bridge-way-cycleway:bridge",
    "line:bridge-street-track:bridge",
    "line:bridge-street-pedestrian:bridge",
    "line:bridge-street-service:bridge",
    "line:bridge-street-livingstreet:bridge",
    "line:bridge-street-residential:bridge",
    "line:bridge-street-unclassified:bridge",
    "line:bridge-street-busway:bridge",
    "line:bridge-street-busguideway:bridge",
    "line:bridge-street-tertiary-link:bridge",
    "line:bridge-street-secondary-link:bridge",
    "line:bridge-street-primary-link:bridge",
    "line:bridge-street-trunk-link:bridge",
    "line:bridge-street-motorway-link:bridge",
    "line:bridge-street-tertiary:bridge",
    "line:bridge-street-secondary:bridge",
    "line:bridge-street-primary:bridge",
    "line:bridge-street-trunk:bridge",
    "line:bridge-street-motorway:bridge",
    "fill:bridge-street-pedestrian-zone",
    "line:bridge-way-footway:outline",
    "line:bridge-way-steps:outline",
    "line:bridge-way-path:outline",
    "line:bridge-way-cycleway:outline",
    "line:bridge-street-track:outline",
    "line:bridge-street-pedestrian:outline",
    "line:bridge-street-service:outline",
    "line:bridge-street-livingstreet:outline",
    "line:bridge-street-residential:outline",
    "line:bridge-street-unclassified:outline",
    "line:bridge-street-busway:outline",
    "line:bridge-street-busguideway:outline",
    "line:bridge-street-tertiary-link:outline",
    "line:bridge-street-secondary-link:outline",
    "line:bridge-street-primary-link:outline",
    "line:bridge-street-trunk-link:outline",
    "line:bridge-street-motorway-link:outline",
    "line:bridge-street-tertiary:outline",
    "line:bridge-street-secondary:outline",
    "line:bridge-street-primary:outline",
    "line:bridge-street-trunk:outline",
    "line:bridge-street-motorway:outline",
    "line:bridge-way-footway",
    "line:bridge-way-steps",
    "line:bridge-way-path",
    "line:bridge-way-cycleway",
    "line:bridge-street-track",
    "line:bridge-street-pedestrian",
    "line:bridge-street-service",
    "line:bridge-street-livingstreet",
    "line:bridge-street-residential",
    "line:bridge-street-unclassified",
    "line:bridge-street-busway",
    "line:bridge-street-busguideway",
    "line:bridge-street-track-bicycle",
    "line:bridge-street-pedestrian-bicycle",
    "line:bridge-street-service-bicycle",
    "line:bridge-street-livingstreet-bicycle",
    "line:bridge-street-residential-bicycle",
    "line:bridge-street-unclassified-bicycle",
    "line:bridge-street-tertiary-link",
    "line:bridge-street-secondary-link",
    "line:bridge-street-primary-link",
    "line:bridge-street-trunk-link",
    "line:bridge-street-motorway-link",
    "line:bridge-street-tertiary",
    "line:bridge-street-secondary",
    "line:bridge-street-primary",
    "line:bridge-street-trunk",
    "line:bridge-street-motorway",
    "line:bridge-transport-rail:outline",
    "line:bridge-transport-rail-service:outline",
    "line:bridge-transport-lightrail:outline",
    "line:bridge-transport-lightrail-service:outline",
    "line:bridge-transport-subway:outline",
    "line:bridge-transport-narrowgauge:outline",
    "line:bridge-transport-tram:outline",
    "line:bridge-transport-funicular:outline",
    "line:bridge-transport-monorail:outline",
    "line:bridge-transport-rail",
    "line:bridge-transport-rail-service",
    "line:bridge-transport-lightrail",
    "line:bridge-transport-lightrail-service",
    "line:bridge-transport-subway",
    "line:bridge-transport-narrowgauge",
    "line:bridge-transport-tram",
    "line:bridge-transport-funicular",
    "line:bridge-transport-monorail",
    "background:slot-below-symbols",
    "line:boundary-country:outline",
    "line:boundary-country-disputed:outline",
    "line:boundary-state:outline",
    "line:boundary-country",
    "line:boundary-country-disputed",
    "line:boundary-state",
    "line:boundary-country-maritime",
    "symbol:label-address-housenumber",
    "symbol:marking-oneway",
    "symbol:marking-oneway-reverse",
    "symbol:marking-bicycle",
    "symbol:poi-amenity",
    "symbol:poi-leisure",
    "symbol:poi-tourism",
    "symbol:poi-shop",
    "symbol:poi-man_made",
    "symbol:poi-historic",
    "symbol:poi-emergency",
    "symbol:poi-highway",
    "symbol:poi-office",
    "symbol:symbol-transit-bus",
    "symbol:symbol-transit-tram",
    "symbol:symbol-transit-station",
    "symbol:symbol-transit-airfield",
    "symbol:symbol-transit-airport",
    "background:slot-below-labels",
    "symbol:label-motorway-exit",
    "symbol:label-motorway-shield",
    "symbol:label-street-pedestrian",
    "symbol:label-street-livingstreet",
    "symbol:label-street-residential",
    "symbol:label-street-unclassified",
    "symbol:label-street-tertiary",
    "symbol:label-street-secondary",
    "symbol:label-street-primary",
    "symbol:label-street-trunk",
    "symbol:label-street-track",
    "symbol:label-place-neighbourhood",
    "symbol:label-place-quarter",
    "symbol:label-place-suburb",
    "symbol:label-place-hamlet",
    "symbol:label-place-village",
    "symbol:label-place-town",
    "symbol:label-boundary-state",
    "symbol:label-place-city",
    "symbol:label-place-statecapital",
    "symbol:label-place-capital",
    "symbol:label-boundary-country-small",
    "symbol:label-boundary-country-medium",
    "symbol:label-boundary-country-large",
    "fill-extrusion:building-3d",
  ],
  "sources": [
    "elevation",
    "versatiles-shortbread",
  ],
  "version": 8,
}
`;

exports[`generated style shape snapshots > satellite raster-only (no overlay) 1`] = `
{
  "hasLight": false,
  "hasSky": true,
  "hasTerrain": false,
  "layers": [
    "background:background",
    "background:slot-below-raster",
    "raster:satellite",
    "background:slot-below-symbols",
    "background:slot-below-labels",
  ],
  "sources": [
    "satellite",
  ],
  "version": 8,
}
`;

exports[`generated style shape snapshots > satellite with toner overlay 1`] = `
{
  "hasLight": false,
  "hasSky": true,
  "hasTerrain": false,
  "layers": [
    "background:background",
    "background:slot-below-raster",
    "raster:satellite",
    "background:slot-below-streets",
    "line:way-footway:outline",
    "line:way-steps:outline",
    "line:way-path:outline",
    "line:way-cycleway:outline",
    "line:street-track:outline",
    "line:street-pedestrian:outline",
    "line:street-service:outline",
    "line:street-livingstreet:outline",
    "line:street-residential:outline",
    "line:street-unclassified:outline",
    "line:street-busway:outline",
    "line:street-busguideway:outline",
    "line:street-tertiary-link:outline",
    "line:street-secondary-link:outline",
    "line:street-primary-link:outline",
    "line:street-trunk-link:outline",
    "line:street-motorway-link:outline",
    "line:street-tertiary:outline",
    "line:street-secondary:outline",
    "line:street-primary:outline",
    "line:street-trunk:outline",
    "line:street-motorway:outline",
    "line:way-footway",
    "line:way-steps",
    "line:way-path",
    "line:way-cycleway",
    "line:street-track",
    "line:street-pedestrian",
    "line:street-service",
    "line:street-livingstreet",
    "line:street-residential",
    "line:street-unclassified",
    "line:street-busway",
    "line:street-busguideway",
    "line:street-track-bicycle",
    "line:street-pedestrian-bicycle",
    "line:street-service-bicycle",
    "line:street-livingstreet-bicycle",
    "line:street-residential-bicycle",
    "line:street-unclassified-bicycle",
    "line:street-tertiary-link",
    "line:street-secondary-link",
    "line:street-primary-link",
    "line:street-trunk-link",
    "line:street-motorway-link",
    "line:street-tertiary",
    "line:street-secondary",
    "line:street-primary",
    "line:street-trunk",
    "line:street-motorway",
    "line:transport-rail:outline",
    "line:transport-rail-service:outline",
    "line:transport-lightrail:outline",
    "line:transport-lightrail-service:outline",
    "line:transport-subway:outline",
    "line:transport-narrowgauge:outline",
    "line:transport-tram:outline",
    "line:transport-funicular:outline",
    "line:transport-monorail:outline",
    "line:aerialway-cablecar:outline",
    "line:aerialway-gondola:outline",
    "line:aerialway-goods:outline",
    "line:aerialway-chairlift:outline",
    "line:aerialway-draglift:outline",
    "line:aerialway-tbar:outline",
    "line:aerialway-jbar:outline",
    "line:aerialway-platter:outline",
    "line:aerialway-ropetow:outline",
    "line:transport-rail",
    "line:transport-rail-service",
    "line:transport-lightrail",
    "line:transport-lightrail-service",
    "line:transport-subway",
    "line:transport-narrowgauge",
    "line:transport-tram",
    "line:transport-funicular",
    "line:transport-monorail",
    "line:aerialway-cablecar",
    "line:aerialway-gondola",
    "line:aerialway-goods",
    "line:aerialway-chairlift",
    "line:aerialway-draglift",
    "line:aerialway-tbar",
    "line:aerialway-jbar",
    "line:aerialway-platter",
    "line:aerialway-ropetow",
    "line:transport-ferry",
    "line:bridge-way-footway:bridge",
    "line:bridge-way-steps:bridge",
    "line:bridge-way-path:bridge",
    "line:bridge-way-cycleway:bridge",
    "line:bridge-street-track:bridge",
    "line:bridge-street-pedestrian:bridge",
    "line:bridge-street-service:bridge",
    "line:bridge-street-livingstreet:bridge",
    "line:bridge-street-residential:bridge",
    "line:bridge-street-unclassified:bridge",
    "line:bridge-street-busway:bridge",
    "line:bridge-street-busguideway:bridge",
    "line:bridge-street-tertiary-link:bridge",
    "line:bridge-street-secondary-link:bridge",
    "line:bridge-street-primary-link:bridge",
    "line:bridge-street-trunk-link:bridge",
    "line:bridge-street-motorway-link:bridge",
    "line:bridge-street-tertiary:bridge",
    "line:bridge-street-secondary:bridge",
    "line:bridge-street-primary:bridge",
    "line:bridge-street-trunk:bridge",
    "line:bridge-street-motorway:bridge",
    "line:bridge-way-footway:outline",
    "line:bridge-way-steps:outline",
    "line:bridge-way-path:outline",
    "line:bridge-way-cycleway:outline",
    "line:bridge-street-track:outline",
    "line:bridge-street-pedestrian:outline",
    "line:bridge-street-service:outline",
    "line:bridge-street-livingstreet:outline",
    "line:bridge-street-residential:outline",
    "line:bridge-street-unclassified:outline",
    "line:bridge-street-busway:outline",
    "line:bridge-street-busguideway:outline",
    "line:bridge-street-tertiary-link:outline",
    "line:bridge-street-secondary-link:outline",
    "line:bridge-street-primary-link:outline",
    "line:bridge-street-trunk-link:outline",
    "line:bridge-street-motorway-link:outline",
    "line:bridge-street-tertiary:outline",
    "line:bridge-street-secondary:outline",
    "line:bridge-street-primary:outline",
    "line:bridge-street-trunk:outline",
    "line:bridge-street-motorway:outline",
    "line:bridge-way-footway",
    "line:bridge-way-steps",
    "line:bridge-way-path",
    "line:bridge-way-cycleway",
    "line:bridge-street-track",
    "line:bridge-street-pedestrian",
    "line:bridge-street-service",
    "line:bridge-street-livingstreet",
    "line:bridge-street-residential",
    "line:bridge-street-unclassified",
    "line:bridge-street-busway",
    "line:bridge-street-busguideway",
    "line:bridge-street-track-bicycle",
    "line:bridge-street-pedestrian-bicycle",
    "line:bridge-street-service-bicycle",
    "line:bridge-street-livingstreet-bicycle",
    "line:bridge-street-residential-bicycle",
    "line:bridge-street-unclassified-bicycle",
    "line:bridge-street-tertiary-link",
    "line:bridge-street-secondary-link",
    "line:bridge-street-primary-link",
    "line:bridge-street-trunk-link",
    "line:bridge-street-motorway-link",
    "line:bridge-street-tertiary",
    "line:bridge-street-secondary",
    "line:bridge-street-primary",
    "line:bridge-street-trunk",
    "line:bridge-street-motorway",
    "line:bridge-transport-rail:outline",
    "line:bridge-transport-rail-service:outline",
    "line:bridge-transport-lightrail:outline",
    "line:bridge-transport-lightrail-service:outline",
    "line:bridge-transport-subway:outline",
    "line:bridge-transport-narrowgauge:outline",
    "line:bridge-transport-tram:outline",
    "line:bridge-transport-funicular:outline",
    "line:bridge-transport-monorail:outline",
    "line:bridge-transport-rail",
    "line:bridge-transport-rail-service",
    "line:bridge-transport-lightrail",
    "line:bridge-transport-lightrail-service",
    "line:bridge-transport-subway",
    "line:bridge-transport-narrowgauge",
    "line:bridge-transport-tram",
    "line:bridge-transport-funicular",
    "line:bridge-transport-monorail",
    "background:slot-below-symbols",
    "line:boundary-country:outline",
    "line:boundary-country-disputed:outline",
    "line:boundary-state:outline",
    "line:boundary-country",
    "line:boundary-country-disputed",
    "line:boundary-state",
    "line:boundary-country-maritime",
    "symbol:label-address-housenumber",
    "symbol:marking-oneway",
    "symbol:marking-oneway-reverse",
    "symbol:marking-bicycle",
    "symbol:poi-amenity",
    "symbol:poi-leisure",
    "symbol:poi-tourism",
    "symbol:poi-shop",
    "symbol:poi-man_made",
    "symbol:poi-historic",
    "symbol:poi-emergency",
    "symbol:poi-highway",
    "symbol:poi-office",
    "symbol:symbol-transit-bus",
    "symbol:symbol-transit-tram",
    "symbol:symbol-transit-station",
    "symbol:symbol-transit-airfield",
    "symbol:symbol-transit-airport",
    "background:slot-below-labels",
    "symbol:label-motorway-exit",
    "symbol:label-motorway-shield",
    "symbol:label-street-pedestrian",
    "symbol:label-street-livingstreet",
    "symbol:label-street-residential",
    "symbol:label-street-unclassified",
    "symbol:label-street-tertiary",
    "symbol:label-street-secondary",
    "symbol:label-street-primary",
    "symbol:label-street-trunk",
    "symbol:label-street-track",
    "symbol:label-place-neighbourhood",
    "symbol:label-place-quarter",
    "symbol:label-place-suburb",
    "symbol:label-place-hamlet",
    "symbol:label-place-village",
    "symbol:label-place-town",
    "symbol:label-boundary-state",
    "symbol:label-place-city",
    "symbol:label-place-statecapital",
    "symbol:label-place-capital",
    "symbol:label-boundary-country-small",
    "symbol:label-boundary-country-medium",
    "symbol:label-boundary-country-large",
  ],
  "sources": [
    "satellite",
    "versatiles-shortbread",
  ],
  "version": 8,
}
`;

exports[`generated style shape snapshots > variant layer counts 1`] = `
{
  "colorful-terrain/de": 349,
  "colorful-terrain/en": 349,
  "colorful-terrain/style": 349,
  "colorful/de": 348,
  "colorful/en": 348,
  "colorful/nolabel": 323,
  "colorful/style": 348,
  "eclipse-terrain/de": 349,
  "eclipse-terrain/en": 349,
  "eclipse-terrain/style": 349,
  "eclipse/de": 348,
  "eclipse/en": 348,
  "eclipse/nolabel": 323,
  "eclipse/style": 348,
  "empty/style": 5,
  "gray-terrain/de": 349,
  "gray-terrain/en": 349,
  "gray-terrain/style": 349,
  "gray/de": 348,
  "gray/en": 348,
  "gray/nolabel": 323,
  "gray/style": 348,
  "graybeard-terrain/de": 349,
  "graybeard-terrain/en": 349,
  "graybeard-terrain/style": 349,
  "graybeard/de": 348,
  "graybeard/en": 348,
  "graybeard/nolabel": 323,
  "graybeard/style": 348,
  "muted-terrain/de": 349,
  "muted-terrain/en": 349,
  "muted-terrain/style": 349,
  "muted/de": 348,
  "muted/en": 348,
  "muted/nolabel": 323,
  "muted/style": 348,
  "natural-terrain/de": 349,
  "natural-terrain/en": 349,
  "natural-terrain/style": 349,
  "natural/de": 348,
  "natural/en": 348,
  "natural/nolabel": 323,
  "natural/style": 348,
  "neutrino-terrain/de": 349,
  "neutrino-terrain/en": 349,
  "neutrino-terrain/style": 349,
  "neutrino/de": 348,
  "neutrino/en": 348,
  "neutrino/nolabel": 323,
  "neutrino/style": 348,
  "satellite/de": 232,
  "satellite/en": 232,
  "satellite/overlay": 232,
  "satellite/style": 5,
  "shadow-terrain/de": 349,
  "shadow-terrain/en": 349,
  "shadow-terrain/style": 349,
  "shadow/de": 348,
  "shadow/en": 348,
  "shadow/nolabel": 323,
  "shadow/style": 348,
  "terrain/de": 233,
  "terrain/en": 233,
  "terrain/overlay": 233,
  "terrain/style": 6,
  "toner-terrain/de": 349,
  "toner-terrain/en": 349,
  "toner-terrain/style": 349,
  "toner/de": 348,
  "toner/en": 348,
  "toner/nolabel": 323,
  "toner/style": 348,
}
`;
